updated CMakeLists RPATH settings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ ExternalProject_Add(project_slug
 )
 ExternalProject_Get_Property(project_slug install_dir)
 get_filename_component(slug_install_dir ${install_dir} ABSOLUTE)
-message(STATUS "SLUG install directory: ${slug_install_dir}")
+message(STATUS "SLUG install directory is: ${slug_install_dir}")
 add_library(slug2 STATIC IMPORTED)
 set_property(TARGET slug2 PROPERTY IMPORTED_LOCATION ${slug_install_dir}/libslug.so)
 add_dependencies(slug2 project_slug)
@@ -29,8 +29,6 @@ add_dependencies(slug2 project_slug)
 add_executable(test_sfr sfr.cpp slug_object.cpp)
 ExternalProject_Get_Property(project_slug source_dir)
 include_directories(${source_dir}/src)
-set_target_properties(test_sfr PROPERTIES INSTALL_RPATH ${slug_install_dir})
-set_target_properties(test_sfr PROPERTIES BUILD_WITH_INSTALL_RPATH on)
 target_link_libraries(test_sfr PUBLIC MPI::MPI_CXX)
 target_link_libraries(test_sfr PUBLIC GSL::gsl)
 target_link_libraries(test_sfr PUBLIC Boost::system)
