--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blt"]
 	path = blt
 	url = https://github.com/LLNL/blt.git
+[submodule "slug2"]
+	path = slug2
+	url = git@bitbucket.org:benwibking/slug2.git
