--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,6 @@ blt_add_executable(NAME test_sfr
 
 blt_add_test(NAME test_sfr
              COMMAND test_sfr)
+
+blt_add_code_checks(PREFIX test_sfr
+                    SOURCES sfr.cpp slug_object.cpp)
