--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 blt_add_executable(NAME test_sfr
                    SOURCES sfr.cpp slug_object.cpp
-                   DEPENDS_ON mpi slug2 gsl boost gtest)
+                   DEPENDS_ON mpi pcg slug2 gsl boost gtest)
 
 blt_add_test(NAME test_sfr
              COMMAND test_sfr)
