--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 blt_add_executable(NAME test_sfr
     SOURCES sfr.cpp slug_wrapper.cpp
-    DEPENDS_ON mpi slug pcg gsl boost gtest)
+    DEPENDS_ON slug pcg gsl boost gtest)
 
 blt_add_executable(NAME test_rng
     SOURCES rng.cpp
@@ -17,3 +17,10 @@ blt_add_code_checks(PREFIX test_sfr
 
 blt_add_code_checks(PREFIX test_rng
     SOURCES rng.cpp)
+
+blt_add_executable(NAME slug_benchmark
+    SOURCES slug_bench.cpp slug_wrapper.cpp
+    DEPENDS_ON slug pcg gsl boost gbenchmark)
+
+blt_add_benchmark(NAME slug_benchmark
+    COMMAND slug_benchmark)
